desktop-base (5.0.7) UNRELEASED; urgency=low

  * debian/control:
    - update kde suggest to kde-standards.                      closes: #548244
  * backgrounds:
    - add SpaceFun wallpaper
  * slashy:
    - add SpaceFun theme
  * debian/postinst:
    - add SpaceFun alternative at maximum level (default Squeeze theme)

 -- Yves-Alexis Perez <corsac@debian.org>  Tue, 09 Nov 2010 22:05:54 +0100

desktop-base (5.0.6) unstable; urgency=low

  * Non-maintainer upload with ok from Gustavo.
  * Not failing if update-grub2 returns non-zero, this unbreaks
    usage for debian-live (Closes: #467620).

 -- Daniel Baumann <daniel@debian.org>  Fri, 30 Jul 2010 04:46:32 +0200

desktop-base (5.0.5) unstable; urgency=low

  * debian/{preinst,postinst}: remove deprecated, unshipped alternatives.

 -- Yves-Alexis Perez <corsac@debian.org>  Fri, 27 Feb 2009 08:44:53 +0100

desktop-base (5.0.4) unstable; urgency=low

  * Add session and desktop config files for Xfce 4.6.

 -- Yves-Alexis Perez <corsac@debian.org>  Fri, 27 Feb 2009 01:15:20 +0100

desktop-base (5.0.3) unstable; urgency=medium

  * debian/preinst:
    - handle upgrade in various cases: (/etc/splashy/themes symlink or not,
      and changed or unchanged themes files)
  * debian/README.Debian: 
    - announce the change.
    - tell user how to enable MoreBlue orbit theme if splashy is installed
      after desktop-base.
  * debian/postinst:
    - make sure we can use /etc/splashy/config.xml.
  * debian/source.lintian-overrides:
    - add override for not adding ${misc:depends} to Depends: line.

 -- Yves-Alexis Perez <corsac@debian.org>  Sun, 14 Dec 2008 21:56:30 +0100

desktop-base (5.0.2) unstable; urgency=low

  * moreblue-orbit-wallpaper-widescreen.svg updated, fix a “transparent”
  * horizontal line on top.
  * debian/rules:
    - install splashy themes in /usr/share instead of /etc.     closes: #501315
  * debian/postinst, debian/prerm
    - move properly /etc/splashy/ conffiles to /usr/share/splashy.
