@@ -8,8 +8,9 @@ desktop-base (5.0.7) UNRELEASED; urgency=low
     - add SpaceFun theme
   * debian/postinst:
     - add SpaceFun alternative at maximum level (default Squeeze theme)
+  * Makefile: drop unused rules for KDE3 and Xfce 4.4.
 
- -- Yves-Alexis Perez <corsac@debian.org>  Tue, 09 Nov 2010 22:05:54 +0100
+ -- Yves-Alexis Perez <corsac@debian.org>  Tue, 09 Nov 2010 22:08:32 +0100
 
 desktop-base (5.0.6) unstable; urgency=low
 
